--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,14 +21,23 @@ html {
 }
 
 body {
-     color: #666666;
-     font-size: 14px;
-     font-family: poppins;
-     line-height: 1.80857;
-     font-weight: normal;
-     overflow-x: hidden;
+  color: #666666;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.80857;
+  font-weight: normal;
+
+  /* Prevent horizontal scroll */
+  overflow-x: hidden;
+
+  /* Hide scrollbar (all browsers) */
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE and Edge */
 }
 
+body::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari */
+}
 a {
      color: #1f1f1f;
      text-decoration: none !important;
@@ -425,6 +434,8 @@ a.readmore_bt {
      margin: 0px 50px;
      position: absolute !important;
      backdrop-filter: blur(40px);
+     width: 100%;
+
 }
 
 .navbar .nav-item:last-child {
@@ -458,6 +469,7 @@ a.readmore_bt {
      grid-template-columns: repeat(4, 1fr);
      justify-self: end;
      align-items: inherit;
+         margin-right: 100px;
 }
 
 .nav-item a {
