--- a/styles/globals.css
+++ b/styles/globals.css
@@ -438,13 +438,13 @@ a.readmore_bt {
 
 }
 
-.navbar .nav-item:last-child {
+.contact-btn {
      background-color: #022739;
      padding: 5px 18px;
      transition: 0.5s padding ease-in-out;
 }
 
-.sticky .nav-item:last-child {
+.sticky .contact-btn {
      background-color: #fff;
      padding: 0px;
      transition: 0.5s padding ease-in-out;
