--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3087,6 +3087,6 @@ margin-top: -7rem;
      }
 
      .title-h1{
-          margin-top: -17rem;
+          margin-top: -17rem !important;
      }
 }
